--- a/bewell-frontend/package.json
+++ b/bewell-frontend/package.json
@@ -12,12 +12,12 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
     "react-icons": "^4.3.1",
     "react-loader-spinner": "^4.0.0",
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.0-next.58",
+    "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
