--- a/bewell-frontend/package.json
+++ b/bewell-frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.0-next.58",
     "universal-cookie": "^4.0.4",
+    "usehooks-ts": "^2.6.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.2"
   },
